# e-paper-pyos

./: .envrc.example.sh  .gitignore  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
e_paper_pyos/: main.py
e_paper_pyos/apps/spotify/: spotify.py
spotify_e_paper_control/: main.py  spotify.py
spotify_e_paper_control/TP_lib/: epd2in13_V4.py
spotify_e_paper_control/apps/spotify/: spotify.py
